# Mamba

./: README.md  pypi-publish.yml  pyproject.toml
.github/workflows/: pypi-publish.yml
Number/: README.md  interactive_test.py  requirements.txt  setup.py  test.py
Number/mamba/: cli.py  modules.py
mamba/: __init__.py  core.py  utils.py
workflows/: benchmark.yml  ci.yml  dependable.yml  release.yml
