[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-security"
version = "1.0.0"
description = "Powerful OSINT library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CzaxStudio"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "dnspython>=2.2.0",
    "python-whois>=0.7.0",
]

[project.scripts]
mamba = "mamba.cli:main"

[tool.setuptools]
packages = ["mamba"]
include-package-data = true

[tool.setuptools.package-data]
mamba = ["*.py", "*.pyi"]
